fix right arrow overflow

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,4 @@
 footer {
-  width: 100%;
   border: 1px solid black;
   background-color: #191919;
 }
